Remove box in project's cards. Fix offset to jump to skills.

--- a/src/components/background/experience.scss
+++ b/src/components/background/experience.scss
@@ -8,6 +8,7 @@
   width: 60%;
   align-self: center;
   margin: 150px 0;
+  padding-top: 3rem;
 }
 
 .background__container {
