--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -35,8 +35,7 @@ i {
   align-items: center;
   justify-content: center;
   margin: 10px 0px;
-  border: 1px solid black;
-  height: 60px;
+  height: 0;
 }
 
 .links {
