--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,6 +3,7 @@
 header {
   display: flex;
   width: 100%;
+  height: 2rem;
   justify-content: center;
   align-items: center;
   top: 0;
