--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -6,7 +6,7 @@
   align-items: center;
   width: 66%;
   gap:100px;
-  margin-top: 30px;
+  margin-top: 130px;
 }
 
 .hero ul {
