--- a/src/components/work/work.scss
+++ b/src/components/work/work.scss
@@ -2,6 +2,7 @@
   text-align: center;
   width: 66%;
   margin: 50px auto;
+  padding-top: 3rem;
 }
 
 .works__content {
